styles.css
h1{
    text-align: center;
    border: 7px double white;
    padding: 1%;
}
h2{
    text-align: center;
    background-color:brown;
    border: 5px solid white;
    padding: 10px;
    border-radius: 5px;
}
p{
    text-align: left;
    width: 50%;
    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
    line-height: 1.3;
}
body {
  background-color: black;
  color: rgb(255, 255, 255);
  padding: 30px;
  width: 100%;
}
.italic{
  font-style: italic;
}
a:link {
  color: rgb(134, 207, 255);
  font-weight: bold;
  text-decoration-line: none;

}
a:visited{
  color: rgb(202, 39, 102);
}
a:hover{
  text-decoration-line: underline;
  text-decoration-thickness: 1px;
}

a:active{
  color: rgb(60, 160, 228);
}
.images img{
  float: right;
  margin-left: 10px; 
  max-width: 50%;
}
#hilary_hahn{
  outline: 4px solid white;
  outline-offset: -4px;
}
#container{
  max-width: 1200px;
  min-width: 300px;
  margin: auto;
}
.content{
  min-height: 300px;
  max-width: 1200px;
  overflow: auto;
  padding: 1rem;
  margin-bottom: 2rem;
}
@media (max-width: 1200px) {
  #container{
  max-width: 1000px;
}
}
@media (max-width: 992px) {
  #container{
  max-width: 900px;
}
}
@media (max-width: 768px) {
  #container{
  max-width: 95%;
}
}

